<resources>
    <string name="app_name">5MONTH Youtube</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_video">Title of video</string>
    <string name="_32_video_series">32 video series</string>
    <string name="emotional_well_being_healing_practices_for_childrenemotional_well_being_healing_practices_for_children">Emotional Well-being  Healing Practices for Children</string>
    <string name="playlist">playlist</string>
    <string name="_playlist">Playlist</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="todo">TODO</string>
</resources>