<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/cornerRadius_8"
        android:scaleType="centerCrop"
        app:cardCornerRadius="@dimen/cornerRadius_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/image"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_playlists"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="140dp"
            android:layout_height="26dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="2dp"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotional_well_being_healing_practices_for_childrenemotional_well_being_healing_practices_for_children"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_32_video_series"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>